# PHPsunshine

./: BUILD_COMPLETE.md  CONTRIBUTING.md  Cargo.toml  FEATURES.md  KEYBINDINGS.md  MANIFESTO.md  QUICKSTART.md  README.md  start.sh
src/: main.rs
src/editor/: mod.rs
src/filebrowser/: mod.rs
src/git/: mod.rs
src/icons/: mod.rs
src/project/: mod.rs
src/tabs/: mod.rs
src/theme/: mod.rs
